# neuralSDF

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  readme.md  structs.h
file_functions/: read_data.h
perceptron/: Perceptron.cpp  Perceptron.h  mat_functions.h
sdf_files/: layers1.json  layers2.json
